# pytorch-transformer

./: main.py  pyproject.toml
transformer/: model.py
transformer/model/: attention.py  block.py  embedding.py  mlp.py
transformer/model/tests/: test_attention.py  test_embedding.py
