[project]
name = "transformer"
version = "0.1.0"
description = "My prep for openai"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.1",
    "jax>=0.6.1",
    "jaxtyping>=0.3.2",
    "pytest>=8.3.5",
    "ruff>=0.11.11",
    "torch>=2.7.0",
]


[tool.ruff.lint]
    ignore = ["F722"]
